[build-system]
requires = [
  "setuptools==70.1.0",
  "setuptools-scm==8.1.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "ttnn"
authors = [
    {name = "Tenstorrent"},
    {email = "info@tenstorrent.com"},
]
dependencies = [
  "numpy>=1.24.4,<2",
  "loguru>=0.6.0",
  "networkx>=3.1",
  "graphviz>=0.20.3",
  "pyyaml>=5.4",
  "click>=8.1.7",
  "pandas>=2.0.3",
  "seaborn>=0.13.2",
]
requires-python = ">=3.10"
keywords = ["metalium", "ttnn", "tt-metal", "machine learning", "tenstorrent", "libnuma", "libhwloc"]
license = { text = "Apache-2.0" }
description = "General compute framework for Tenstorrent devices"
dynamic = ["version", "readme"]

[project.urls]
Homepage = "https://docs.tenstorrent.com/tt-metal/latest/ttnn"
Documentation = "https://docs.tenstorrent.com/tt-metal/latest/ttnn"
Repository = "https://github.com/tenstorrent/tt-metal"
Issues = "https://github.com/tenstorrent/tt-metal/issues"

[project.scripts]
tt-run = "ttnn.distributed.ttrun:main"

[tool.black]
line-length = 120
include = '^.*(ttnn|tests/scripts|tests/ttnn|tests/tt_eager/python_api_testing|tt_eager/tt_lib|tests/scripts|models/demos|infra|.github)/.*\.py$'

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
skip = ["__init__.py"]

[tool.ruff]
line-length = 120

[tool.setuptools_scm]
# Supported tag formats:
# v1.2.3, v1.2.3-rc1
tag_regex = '^(?:v)?(?P<version>\d+\.\d+\.\d+(?:-rc\d+)?)$'
#Only look for release tags for calculating distance for wheel name
git_describe_command = [
  "git","describe","--dirty","--tags","--long",
  "--match","v[0-9]*.[0-9]*.[0-9]*",
  "--match","v[0-9]*.[0-9]*.[0-9]*-rc[0-9]*",
  "--exclude","*-dev*"
]
fallback_version = "0.0.0.dev0"


[tool.cibuildwheel]
skip = "*-musllinux_*"
build-verbosity = 2

[tool.uv]
# Use "copy" mode instead of the default "hardlink" or "symlink" modes.
# This ensures packages are fully independent copies in the virtual environment,
# which is more compatible with:
# - Network filesystems (NFS, CIFS) that may not support hardlinks across mount points
# - Container environments where the cache and venv may be on different volumes
# - Scenarios where the uv cache might be cleared independently of the venv
# Trade-off: Uses more disk space but provides better isolation and portability.
#
# To change: Set to "hardlink" for better disk space usage on local filesystems,
# or "symlink" for fastest operations (requires same filesystem for cache and venv).
link-mode = "copy"
